--- a/template/base.html
+++ b/template/base.html
@@ -2,4 +2,8 @@
 <head >
   <title >{% block title }{% endblock }</title>
 </head >
+<body>
+  <h1>aman</h1>
+  {% block content }{% endblock }
+</body>
 </html >
