--- a/template/index.html
+++ b/template/index.html
@@ -1,1 +1,7 @@
-{% extends "base.html" }
+{% extends "base.html" %}
+{% block title %}
+index page
+{% endblock %}
+{% block content %}
+<h1>SUSCES FULL</h1>
+{% endblock %}
