--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
 <!Doctype html >
 <head >
-  <title >{% block title }{% endblock }</title>
+  <title >{% block title %}{% endblock %}</title>
 </head >
 <body>
   <h1>aman</h1>
-  {% block content }{% endblock }
+  {% block content %}{% endblock %}
 </body>
 </html >
