--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% block title %}
-index page
+profile  page
 {% endblock %}
-
 
 {% block homelink %}{{url_for("home") }}{% endblock %}
 {% block postlink %} {{url_for("post") }}{% endblock %}
@@ -10,5 +9,5 @@ index page
 {% block aboutlink %} {{url_for("about")}} {% endblock %}
 
 {% block content %}
-<h1>SUSCES FULL</h1>
+<h1>PROFILE PAGE </h1>
 {% endblock %}
