--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,44 @@
 <!Doctype html >
 <head >
   <title >{% block title %}{% endblock %}</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head >
 <body>
+  
+<nav class="navbar navbar-dark bg-dark">
+  <div class="container-fluid">
+    
+    
+<ul class="nav nav-tabs">
+  
+<a class="navbar-brand" href="#">
+      <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+MBAT-WC 
+    </a>
+  <li class="nav-item">
+    <a class="{{homeClass}}" href=" 
+{% block homelink %}{% endblock %} ">HOME </a>
+  </li>
+  <li class="nav-item">
+    <a class="{{postClass}}" href="{% block postlink %}{% endblock %}">POST</a>
+  </li>
+  <li class="nav-item">
+    <a class="{{aboutClass}}" href=" 
+{% block aboutlink %}{% endblock %} ">ABOUT</a>
+  </li>
+  <li class="nav-item">
+    <a class="{{profileClass}}" href=" 
+{% block profilelink %}{% endblock %} " >PROFILE</a>
+  </li>
+</ul>
+    
+  </div>
+</nav>
+  
   <h1>aman</h1>
   {% block content %}{% endblock %}
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
 </body>
 </html >
